--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,7 +8,6 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
@@ -46,14 +45,21 @@
 }
 
 .title,
-.description {
+.description,
+.warning {
   text-align: center;
 }
 
 .description {
-  margin: 4rem 0;
+  margin: 4rem 0 0 0;
   line-height: 1.5;
   font-size: 1.5rem;
+}
+
+.warning {
+  line-height: 1;
+  font-size: 1rem;
+  color: firebrick;
 }
 
 .code {
@@ -63,6 +69,24 @@
   font-size: 1.1rem;
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
+}
+
+.bodyText {
+  max-width: 600px;
+  margin-top: 1.5rem;
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+.bodyText a {
+  color: #0070f3;
+  text-decoration: none;
+}
+
+.bodyText a:hover,
+.bodyText a:focus,
+.bodyText a:active {
+  text-decoration: underline;
 }
 
 .grid {
